# coreai-fabric

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/workflows/: bench-submit.yml  cross-contract.yml  validate.yml
attempts/: README.md  lingbot-video-dense-1.3b-dit.jsonl  miril-drone-2b-1.jsonl
coreai_fabric/: __init__.py  analyze.py  bench.py  cli.py  convert.py  error_signatures.py  hf.py  lerobot.py  parity_runner.py  publish.py  recipes.py  register.py  run.py  scaffold.py  util.py  verify.py
coreai_fabric/drivers/: __init__.py  llm_export.py
docs/: benchmark.md  blocks-index.md  coreai-conversion-playbook.md  parity-protocol.md  prefill-chunk-pf64.md  publishing-your-first-models.md  reflect-ritual.md  scorecard.md  toolchain-notes.md  upstream-coverage.md  v060-classb-build-specs.md  v060-conversion-findings.md  validation-log.md  vla-export-runbook.md  vla-jepa-export-runbook.md
docs/superpowers/plans/: 2026-07-09-qwen3_5-highfidelity-lane.md
docs/superpowers/specs/: 2026-07-08-surgical-registry-design.md  2026-07-09-qwen3_5-highfidelity-lane-design.md  2026-07-09-rfc-verification-report.md  redteam-2026-07-08.md
models/act/: export.py  parity.py
models/diffusion/: export.py  parity.py
models/eo1/: export.py
models/eurobert/: export.py  parity.py
models/evo1/: export.py  parity.py
models/fastwam/: export.py
models/groot/: export.py  parity.py
models/lingbot/: export.py  parity.py
models/lingbot_va/: export.py
models/lingbotvideo/: dit_export.py  export.py  vae_streaming_export.py
models/lingbotvla/: action_expert.py  export.py  export_split.py
models/lingbotworld/: export.py
models/miril/: export.py  ref_export.py
models/molmoact2/: action_expert.py  export.py
models/pi0/: export.py  parity.py
models/pi05/: export.py  parity.py
models/pi0fast/: export.py  parity.py
models/qwen3_5/: README.md  __init__.py  ledger.py  parity.py  spec.py
models/qwen3_5/overlay/: PROVENANCE.md
models/qwen3_5/overlay/ios/: qwen3_5.py  qwen3_5_ios.py
models/qwen3_5/overlay/macos/: qwen3_5.py  qwen3_5_config.py  qwen3_5_gdn_metal.py  qwen3_5_metal_kernels.py
models/robometer/: export.py  parity.py
models/sensenova/: export.py  ref_export.py
models/smolvla/: export.py  parity.py  replay_dataset.py
models/vla_jepa/: export.py  extract_action_head.py  parity.py  qwen_context.py  qwen_context_parity.py
models/vlm/: parity.py  register_specs.py  run_export.py
models/vqbet/: export.py  parity.py
quant/: int8_absmax_perblock32.yaml
recipes/: act-aloha-cube.yaml  act-aloha-insertion.yaml  act-so101.yaml  da3-small.yaml  diffusion-pusht.yaml  eo1-3b.yaml  evo1-so100.yaml  fastwam-libero.yaml  folding-latest.yaml  groot-n1-7-3b.yaml  lingbot-va-base.yaml  lingbot-video-dense-1.3b-dit.yaml  lingbot-video-dense-1.3b-vae-streaming.yaml  lingbot-video-dense-1.3b.yaml  lingbot-video-moe-30b-a3b.yaml  lingbot-vision-vit-base.yaml  lingbot-vision-vit-giant.yaml  lingbot-vision-vit-large.yaml  lingbot-vision-vit-small.yaml  lingbot-vla-v2.yaml  lingbot-world-v2-14b-causal-fast.yaml  miril-drone-2b-1.yaml  mistral-7b-instruct-v0.3-int8.yaml  molmoact2-libero.yaml  pi0-base-gemma.yaml  pi0-base.yaml  pi0-libero-base.yaml  pi0-libero-finetuned.yaml  pi0-so101.yaml  pi05-base.yaml  pi05-so100.yaml  pi0fast-base.yaml  pulpie-orange-base.yaml  pulpie-orange-large.yaml  pulpie-orange-small.yaml  qwen2.5-0.5b-instruct-int8.yaml  qwen2.5-1.5b-instruct-int8.yaml  qwen2.5-1.5b-instruct.yaml  qwen2.5-7b-instruct-int8.yaml  qwen2.5-coder-0.5b-instruct-int8.yaml  (+20 more)
schema/: blocks-vocab.yaml  recipe.schema.json
scratchpad/: consolidate_vla_pr.py  lingbot_blocksize.py  lingbot_fetch_expert.py  lingbot_parity_only.py  lingbot_smoke.py  lingbot_split_smoke.py  molmo_fetch_ae.py  molmo_reconstruct.py  molmo_smoke.py  rebuild_lingbot_pr34.py
scripts/: check_gate_flip.py  cross_contract_check.py  generate_blocks_index.py  generate_scorecard.py  pi0_export_probe.py  setup_vla_export.sh
smokes/: README.md  complex-rope-real.py  data-dependent-static-bake.py  feat-cache-as-io.py  graph-split-chaining.py  moe-dense-fusion-lowering.py  sdpa-mask-forms.py
templates/: model-card-action.md  model-card-image-feature-extraction.md  model-card-lerobot-action.md  model-card-reward-model.md  model-card-token-classification.md  model-card-video.md  model-card.md
templates/licenses/: gemma.txt
tests/: test_analyze.py  test_analyze_golden.py  test_bench.py  test_blocks_index.py  test_convert.py  test_docs.py  test_durable_measurement.py  test_error_signatures.py  test_gate_flip.py  test_gemma_compliance.py  test_publish.py  test_publish_allowlist.py  test_publish_bundle_layout.py  test_qwen3_5_ledger.py  test_qwen3_5_parity_gated.py  test_qwen3_5_spec.py  test_recipe_schema.py  test_register.py  test_register_eval.py  test_run.py  test_scaffold.py  test_scorecard.py  test_smokes.py  test_verify.py
tests/fixtures/: README.md  artifact.schema.json  model.schema.json  qwythos_text_config.json  source.schema.json
verify/: Package.resolved  Package.swift  README.md  gate-c.sh
verify/Sources/coreai-runtime-verify/: Verify.swift
