[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coreai-fabric"
version = "0.1.0"
description = "The conversion fabric for Apple Core AI — recipes in, provenance-verified .aimodel out, indexed by coreai-catalog."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Kevin Saltarelli"}]
keywords = [
    "apple", "core-ai", "aimodel", "on-device", "ai",
    "model-conversion", "provenance", "apple-silicon",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/kevinqz/coreai-fabric"
Repository = "https://github.com/kevinqz/coreai-fabric"
Issues = "https://github.com/kevinqz/coreai-fabric/issues"
Catalog = "https://github.com/kevinqz/coreai-catalog"

[project.optional-dependencies]
hf = ["huggingface_hub>=0.20"]
test = ["pytest>=7", "huggingface_hub>=0.20"]
# `bench-submit` (sign the benchmarks.jsonl line + open the signed
# benchmark-lane PR). sigstore does the keyless signing; the catalog clone
# supplies coreai_catalog.bench + scripts/sign_benchmark.py. The `bench`
# measurement step itself needs macOS 27 + the catalog's coreai-bench-runner
# (not a pip dep) — see docs/benchmark.md.
bench = ["sigstore>=3.0", "huggingface_hub>=0.20"]
# The Apple conversion stack VERIFIED on real hardware (Apple Silicon,
# macOS 26, 2026-07-03): coreai-torch 0.4.1 (library, pulls
# coreai-core==1.0.0b2 whose wheel bundles the Core AI compiler AND runtime —
# conversion and Gate B execution both work on macOS 26; deployment via the
# apple/coreai-models Swift runners needs macOS/iOS 27+).
convert = [
    "coreai-torch==0.4.1",
    "torch>=2.8,<=2.11.0",
    "transformers>=4.57,<5.0",
]

[project.scripts]
coreai-fabric = "coreai_fabric.cli:main"
coreai-fabric-llm-export = "coreai_fabric.drivers.llm_export:main"
coreai-fabric-parity-runner = "coreai_fabric.parity_runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["coreai_fabric*"]
